# rgrader

./: .coverage  .gitignore  LICENSE.txt  README.docker.md  README.md  pyproject.toml
.env/: rgrader.dev.env
.github/workflows/: test.yml
src/rgrader/: __about__.py  __init__.py  __main__.py
src/rgrader/cli/: __init__.py  env.py  grade.py  hello.py  merge.py
src/rgrader/settings/: __init__.py
src/rgrader/utils/: sum.py
tests/: test_cli.py  test_hello.py  test_sum2.py
